--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>최원영과 이소민의 결혼식</title>
-    <meta content="최원영과 이소민의 결혼식에 와서 축하해주세요~!" name="description"/>
+    <title>종훈이 돌잔치에 초대합니다~</title>
+    <meta content="종훈이 돌잔치에 와서 축하해주세요~!" name="description"/>
     <meta property="og:image" content="images/pic2.jpeg">
     <meta property="fb:app_id" content="781066922265598" />
     <meta property="fb:admins" content="Choi.Anderson"/>
@@ -54,31 +54,31 @@
             return result;
         }
 
-        $(document).ready(function () {
-
-            function getText(){
-                var result = null;
-                $.ajax( { url: "https://raw.githubusercontent.com/AndersonChoi/wedding-card/master/README.md",
-                        type: 'get',
-                        dataType: 'html',
-                        async: false,
-                        success: function(data) { result = data; }
-                    }
-                );
-                FileReady = true;
-                return result;
-            }
-            var markdown_source = getText();
-            var comment_contents = markdown_source.split("축하의 말")[1];
-
-            var md = new Remarkable();
-            $("#comments").append(md.render(comment_contents));
-
-            
-            if(findGetParameter('gift')=='false'){
-                $('#gifts').hide();
-            }
-        });
+        // $(document).ready(function () {
+        //
+        //     // function getText(){
+        //     //     var result = null;
+        //     //     $.ajax( { url: "https://raw.githubusercontent.com/AndersonChoi/wedding-card/master/README.md",
+        //     //             type: 'get',
+        //     //             dataType: 'html',
+        //     //             async: false,
+        //     //             success: function(data) { result = data; }
+        //     //         }
+        //     //     );
+        //     //     FileReady = true;
+        //     //     return result;
+        //     // }
+        //     var markdown_source = getText();
+        //     var comment_contents = markdown_source.split("축하의 말")[1];
+        //
+        //     var md = new Remarkable();
+        //     $("#comments").append(md.render(comment_contents));
+        //
+        //
+        //     if(findGetParameter('gift')=='false'){
+        //         $('#gifts').hide();
+        //     }
+        // });
 
 
 
@@ -95,14 +95,14 @@
         <div class="ww-home-page" id="home">
             <div class="ww-wedding-announcement d-flex align-items-center justify-content-start">
                 <div class="container ww-announcement-container">
-                    <p class="ww-couple-name ww-title" style="font-size:4.0em">Wonyoung & Somin</p>
+                    <p class="ww-couple-name ww-title" style="font-size:4.0em">Jong Hoon</p>
                     <p class="h2 mt-5 ww-title" style="font-family: 'Gugi', cursive; font-size:1.0em">
-                        | WE ARE GETTING MARRIED |
+                        | 1'st Birthday |
                     </p>
                     <p class="h2 mt-5 ww-title"
                        style="font-family: 'Noto Serif KR', serif; font-size:1.0em; letter-spacing:-1px">
-                        <b style="font-size:1.4em;">2019. 05. 18. SAT PM 02:30</b>
-                        <br>부산 해운대 센텀시티 센텀사이언스파크 23층
+                        <b style="font-size:1.4em;">2023년 2월 22일, 2:30PM</b>
+                        <br>종후니네 집~~~
                     </p>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                     <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Jonghoon</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Gallery</a></li>
                         </ul>
@@ -128,21 +128,21 @@
         </div>
         <div class="ww-section" id="couple">
             <div class="container">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">신랑 & 신부</h2>
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">주인공</h2>
                 <div class="row text-center">
                     <div class="col-md-6">
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
-                                이소민</h3>
+                                원종훈</h3>
                             <img alt="Groom" class="img-fluid" src="images/pic8.jpeg"/>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="mt-3">
-                            <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
-                                최원영</h3>
-                            <img alt="Bride" class="img-fluid" src="images/pic9.jpeg"/>
-                        </div>
+<!--                    <div class="col-md-6">-->
+<!--                        <div class="mt-3">-->
+<!--                            <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">-->
+<!--                                최원영</h3>-->
+<!--                            <img alt="Bride" class="img-fluid" src="images/pic9.jpeg"/>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
@@ -152,22 +152,22 @@
                 <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">초대합니다</h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
-                            1463<br>
-                            (만난지 4년+1일 되는날 결혼 = 1463일)
+                            365일 돌<br>
+                            (만난지 365일 되는날)
                         </h6>
                     </div>
                 <div class="row">
                     <div class="col-md-7 col-sm-12">
                         <div class="my-3">
-                            <div class="h4">웨딩 본식</div>
+                            <div class="h4">돌잔치</div>
                             <ul>
                                 <li>
                                     <i class="text-muted fas fa-map-marker-alt"></i>
-                                    <span class="pl-2 text-muted">부산 해운대 우동 센텀사이언스 파크 23층</span>
+                                    <span class="pl-2 text-muted">종후니네 집~~</span>
                                 </li>
                                 <li class="pt-2">
                                     <i class="text-muted far fa-calendar-alt"></i>
-                                    <span class="pl-2 text-muted">2019년 5월 18일, 2:30PM</span>
+                                    <span class="pl-2 text-muted">2023년 2월 22일, 2:30PM</span>
                                 </li>
                             </ul>
                         </div>
@@ -185,11 +185,11 @@
                             <ul>
                                 <li>
                                     <i class="text-muted fas fa-map-marker-alt "></i>
-                                    <span class="pl-2 text-muted">부산 해운대 우동 센텀사이언스 파크 지하 1층 더파티 센텀점</span>
+                                    <span class="pl-2 text-muted">종후니네집~~~2층</span>
                                 </li>
                                 <li class="pt-2">
                                     <i class="text-muted far fa-calendar-alt "></i>
-                                    <span class="pl-2 text-muted">2019년 5월 18일, 2:30PM - 4:30PM</span>
+                                    <span class="pl-2 text-muted">2023년 2월 22일, 2:30PM</span>
                                 </li>
                             </ul>
                         </div>
@@ -213,28 +213,28 @@
                             </div>
                             <div class="card" data-groups="[&quot;vacation&quot;]">
                                 <a data-gallery="ww-gallery" data-toggle="lightbox">
-                                    <img alt="Gallery Pic 3" class="img-fluid" src="images/pic3.jpeg"/>
+                                    <img alt="Gallery Pic 3" class="img-fluid" src="images/pic8.jpeg"/>
                                 </a>
                             </div>
                             <div class="card" data-groups="[&quot;party&quot;,&quot;vacation&quot;]">
                                 <a data-gallery="ww-gallery" data-toggle="lightbox">
-                                    <img alt="Gallery Pic 4" class="img-fluid" src="images/pic4.jpeg"/>
+                                    <img alt="Gallery Pic 4" class="img-fluid" src="images/pic8.jpeg"/>
                                 </a>
                             </div>
                             <div class="card" data-groups="[&quot;vacation&quot;]">
                                 <a data-gallery="ww-gallery" data-toggle="lightbox">
-                                    <img alt="Gallery Pic 5" class="img-fluid" src="images/pic6.jpeg"/>
+                                    <img alt="Gallery Pic 5" class="img-fluid" src="images/pic8.jpeg"/>
                                 </a>
                             </div>
                             <div class="card"
                                  data-groups="[&quot;wedding&quot;,&quot;ceremony&quot;,&quot;party&quot;]">
                                 <a data-gallery="ww-gallery" data-toggle="lightbox">
-                                    <img alt="Gallery Pic 6" class="img-fluid" src="images/pic7.jpeg"/>
+                                    <img alt="Gallery Pic 6" class="img-fluid" src="images/pic8.jpeg"/>
                                 </a>
                             </div>
                             <div class="card" data-groups="[&quot;vacation&quot;]">
                                 <a data-gallery="ww-gallery" data-toggle="lightbox">
-                                    <img alt="Gallery Pic 7" class="img-fluid" src="images/pic5.jpeg"/>
+                                    <img alt="Gallery Pic 7" class="img-fluid" src="images/pic8.jpeg"/>
                                 </a>
                             </div>
                         </div>
@@ -364,7 +364,7 @@
                         </div>
                         <div class="col text-center">
                             <label style="font-family: 'Noto Serif KR', serif; font-size: 15px;">
-                                셔틀버스 - 센텀시티역 4번출구앞에서 15분 간격으로 운행
+                                셔틀버스 - 돌잔치도 있나?
                             </label>
                         </div>
                         <div class="my-3">
