--- a/index.html
+++ b/index.html
@@ -336,42 +336,69 @@
                 </div>
             </div>
         </div>
-        <div class="ww-section ww-rsvp-detail" id="map">
-            <div class="container">
-                <div class="col text-center">
-                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">오시는 길</h2>
-                    <div>
-                        <h5 style="font-family: 'Noto Serif KR', serif;">경운이네집</h5>
-                        <h6 style="font-family: 'Noto Serif KR', serif;">경운이네집</h6>
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <div class="my-3 text-center">
-                            <a href="http://naver.me/5pTy3HCa">
-                                <img alt="naver-map" class="map-icon" id="naver-map"
-                                     src="images/map/naver-map.png"/>
-                            </a>
-                            <a href="http://dmaps.kr/2bms8">
-                                <img alt="kakao-map" class="map-icon" id="kakao-map"
-                                     src="images/map/kakao-map.png"/>
-                            </a>
-                            <a href="https://maps.app.goo.gl/jfDxw">
-                                <img alt="google-map" class="map-icon" id="google-map"
-                                     src="images/map/google-map.png"/>
-                            </a>
-                        </div>
-                        <div class="col text-center">
-                            <label style="font-family: 'Noto Serif KR', serif; font-size: 15px;">
-                                셔틀버스 - 돌잔치도 있나?
-                            </label>
-                        </div>
-                        <div class="my-3">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.297439052569!2d129.1238775160104!3d35.1741384652207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c2513ecf5d%3A0x7d362ece2091e2f8!2z7IS87YWA7IKs7J207Ja47Iqk7YyM7YGsIOy7qOuypOyFmO2ZgA!5e0!3m2!1sko!2skr!4v1554092125630!5m2!1sko!2skr" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
+<div class="ww-section" id="map">
+    <div class="container">
+        <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">오시는 길</h2>
+        <!-- * 카카오맵 - 지도퍼가기 -->
+        <!-- 1. 지도 노드 -->
+        <div id="daumRoughmapContainer1670917305898" class="root_daum_roughmap root_daum_roughmap_landing" style="width:100%"></div>
+
+        <!--
+            2. 설치 스크립트
+            * 지도 퍼가기 서비스를 2개 이상 넣을 경우, 설치 스크립트는 하나만 삽입합니다.
+        -->
+        <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+
+        <!-- 3. 실행 스크립트 -->
+        <script charset="UTF-8">
+            new daum.roughmap.Lander({
+                "timestamp" : "1670917305898",
+                "key" : "2cywn",
+                // "mapWidth" : "640",
+                "mapHeight" : "400"
+            }).render();
+        </script>
+
+
+
+
+<!--        <div class="ww-section ww-rsvp-detail" id="map">-->
+<!--            <div class="container">-->
+<!--                <div class="col text-center">-->
+<!--                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">오시는 길</h2>-->
+<!--                    <div>-->
+<!--                        <h5 style="font-family: 'Noto Serif KR', serif;">경운이네집</h5>-->
+<!--                        <h6 style="font-family: 'Noto Serif KR', serif;">경운이네집</h6>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!--                <div class="form-group">-->
+<!--                    <div class="col-md-12">-->
+<!--                        <div class="my-3 text-center">-->
+<!--                            <a href="http://naver.me/5pTy3HCa">-->
+<!--                                <img alt="naver-map" class="map-icon" id="naver-map"-->
+<!--                                     src="images/map/naver-map.png"/>-->
+<!--                            </a>-->
+<!--                            <a href="http://dmaps.kr/2bms8">-->
+<!--                                <img alt="kakao-map" class="map-icon" id="kakao-map"-->
+<!--                                     src="images/map/kakao-map.png"/>-->
+<!--                            </a>-->
+<!--                            <a href="https://maps.app.goo.gl/jfDxw">-->
+<!--                                <img alt="google-map" class="map-icon" id="google-map"-->
+<!--                                     src="images/map/google-map.png"/>-->
+<!--                            </a>-->
+<!--                        </div>-->
+<!--                        <div class="col text-center">-->
+<!--                            <label style="font-family: 'Noto Serif KR', serif; font-size: 15px;">-->
+<!--                                셔틀버스 - 돌잔치도 있나?-->
+<!--                            </label>-->
+<!--                        </div>-->
+<!--                        <div class="my-3">-->
+<!--                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.297439052569!2d129.1238775160104!3d35.1741384652207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c2513ecf5d%3A0x7d362ece2091e2f8!2z7IS87YWA7IKs7J207Ja47Iqk7YyM7YGsIOy7qOuypOyFmO2ZgA!5e0!3m2!1sko!2skr!4v1554092125630!5m2!1sko!2skr" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
 
             </div>
